--- a/client/src/Styles/Sass/pages/login.scss
+++ b/client/src/Styles/Sass/pages/login.scss
@@ -7,16 +7,20 @@
 
     .login {
         background-color: $color-secondary;
-        clip-path: polygon(0 0, 100% 0, 85% 100%, 0 100%);
-        flex-basis: 100%;
+        clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%);
         display: flex;
+        flex-basis: 100%;
+        height: 100%;
         flex-direction: column;
         align-items: center;
+        overflow: auto;
         color: $color-primary;
 
         h1 {
-            font-size: 3.5rem;
-            margin-top: 11%;
+            font-size: 4rem;
+            margin-top: 9.5rem;
+            font-weight: 550;
+            text-align: center;
         }
 
         h4 {
@@ -29,45 +33,47 @@
         form {
             display: flex;
             flex-direction: column;
+            align-items: center;
             justify-content: flex-end;
             height: auto;
             width: 50%;
-            margin-top: 2%;
-            margin-bottom: 4%;
+            margin-top: 2rem;
+            margin-bottom: 4rem;
 
             input {
                 display: block;
-                margin: 2% 0;
+                margin: 1rem 0;
                 width: 100%;
-                height: 4rem;
-                font-size: 1.5rem;
+                height: 4.5rem;
+                font-size: 1.7rem;
+                min-width: 20rem;
                 border: none;
                 outline: none;
                 border-radius: 30px;
-                padding-left: 10px;
+                padding: 0 10px;
             }
 
             button.login-btn {
-                margin-top: 3%;
+                margin-top: 3rem;
                 width: 50%;
                 align-self: center;
-                height: 4rem;
+                height: 4.2rem;
+                min-width: 10rem;
                 font-size: 1.6rem;
                 background-color: $color-primary;
                 color: white;
                 border: none;
                 border-radius: 30px;
                 font-weight: 600;
-                
+
                 &:hover {
-                        cursor: pointer;
-                        position: relative;
-                        top: -2px;
+                    cursor: pointer;
                 }
             }
         }
+
         h2 {
-            margin-bottom: 4%;
+            margin-bottom: 4rem;
             width: 80%;
             text-align: center;
 
@@ -90,70 +96,74 @@
             }
         }
 
-        .auth-google, .auth-linkedin {
+        .oauth {
+            width: 100%;
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: space-around;
-            margin: 1% 0;
-            width: 40%;
-            height: 4rem;
-            border-radius: 30px;
-            background-color: white;
-            border: 2px solid transparent;
-            font-size: 1.5rem;
-            font-weight: 600;
-            color: $color-primary;
 
-            &:hover {
-                cursor: pointer;
-                position: relative;
-                top: -2px;
-            }
-
-            img {
-                height: 70%;
-                margin-left: -5%;
-            }
-
-            div {
-                content: ' ';
+            .auth-google, .auth-linkedin {
+                display: flex;
+                align-items: center;
+                margin: 1rem 0;
+                width: 50%;
+                min-width: 32rem;
+                height: 5rem;
+                border-radius: 30px;
+                background-color: white;
+                border: 2px solid transparent;
+                font-size: 1.7rem;
+                font-weight: 600;
+                color: $color-primary;
+    
+                &:hover {
+                    cursor: pointer;
+                }
+    
+                img {
+                    height: 70%;
+                    margin-left: 2rem;
+                    border-radius: 50%;
+                }
+    
+                span {
+                    display: block;
+                    width: 100%;
+                    margin-left: -5rem;
+                }
             }
         }
     }    
 
     .signup-redirect {
-        flex-basis: 90%;
+        flex-basis: 85%;
         display: flex;
         flex-direction: column;
-        color: $color-primary;
         align-items: flex-end;
-        
+        color: $color-primary;
+
         h1 {
-            padding-right: 5%;
-            font-size: 3.5rem;
-            padding-top: 20px;
+            padding-right: 6rem;
+            font-size: 4rem;
+            padding-top: 2rem;
         }
 
         h2 {
-            font-size: 3.5rem;
-            padding-right: 12%;
-            padding-top: 3%;
+            font-size: 4rem;
+            margin-right: 6rem;
+            margin-top: 1rem;
             text-align: right;
-
-            span {
-                font-size: 4rem;
-            }
         }
 
         a {
-            margin-right: 12%;
-            margin-top: 2%;
-            width: 27%;
+            margin-right: 5rem;
+            margin-top: 3.5rem;
+            width: 29%;
+            line-height: 4rem;
+            min-width: 20rem;
             text-align: center;
-            height: 4rem;
-            font-size: 1.7rem;
+            font-size: 1.8rem;
             font-weight: 600;
-            padding-top: 5px;
             border: 2px solid $color-primary;
             border-radius: 30px;
 
@@ -163,10 +173,82 @@
             }
         }
 
-        img {
-            align-self: center;
-            margin-top: 7%;
+        .img-container {
             width: 90%;
+            align-self: center;
+            margin: auto;
+            overflow: hidden;
+
+            img {
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 760px) {
+    div.auth-login {
+        display: block;
+
+        .signup-redirect {
+            display: none;
+        }
+
+        .login {
+            clip-path: none;
+            overflow-y: auto;
+
+            form {
+                width: 70%;
+
+                input {
+                    width: 80%;
+                }
+                .login-btn {
+                    width: 40%;
+                }
+            }
+
+            .oauth {
+                .auth-linkedin, .auth-google {
+                    width: 70%;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width:360px) {
+    div.auth-login {
+        div.login {
+            h1 {
+                margin-top: 2rem;
+            }
+
+            h2 {
+                min-width: 25rem;
+            }
+
+            .oauth {
+                flex-direction: row;
+                justify-content: center;
+                .auth-linkedin, .auth-google {
+                    width: 4rem;
+                    height: 4rem;
+                    display: flex;
+                    min-width: 0px;
+                    justify-content: center;
+                    border-radius: 50%;
+                    margin: 0 0.5rem;
+                    
+                    span {
+                        display: none;
+                    }
+                    img {
+                        margin-left: 0px;
+                    }
+                }
+            }
         }
     }
 }
