--- a/client/src/Styles/Sass/pages/signup.scss
+++ b/client/src/Styles/Sass/pages/signup.scss
@@ -60,6 +60,7 @@
         background-color: $color-secondary;
         clip-path: polygon(0 0, 100% 0, 100% 100%, 15% 100%);
         display: flex;
+        height: 100%;
         flex-basis: 100%;
         flex-direction: column;
         align-items: center;
