--- a/client/src/Styles/Sass/pages/login.scss
+++ b/client/src/Styles/Sass/pages/login.scss
@@ -3,31 +3,31 @@
 .auth-login {
     display: flex;
     justify-content: space-evenly;
-    height: 100vh;
+    min-height: 100vh;
+    overflow: auto;
 
     .login {
         background-color: $color-secondary;
-        clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%);
+        clip-path: polygon(0 0, 100% 0, 90% 100%, 0% 100%);
         display: flex;
         flex-basis: 100%;
-        height: 100%;
         flex-direction: column;
         align-items: center;
-        overflow: auto;
         color: $color-primary;
 
         h1 {
             font-size: 4rem;
-            margin-top: 9.5rem;
+            margin-top: 11rem;
             font-weight: 550;
             text-align: center;
         }
 
         h4 {
-            font-size: 1.3rem;
-            padding-left: 1%;
-            margin-top: 1%;
+            font-size: 1.5rem;
+            padding-left: 10px;
+            margin-top: 1rem;
             color: $color-primary;
+            width: 100%;
         }
 
         form {
@@ -37,6 +37,7 @@
             justify-content: flex-end;
             height: auto;
             width: 50%;
+            min-width: 20rem;
             margin-top: 2rem;
             margin-bottom: 4rem;
 
@@ -46,7 +47,6 @@
                 width: 100%;
                 height: 4.5rem;
                 font-size: 1.7rem;
-                min-width: 20rem;
                 border: none;
                 outline: none;
                 border-radius: 30px;
@@ -83,16 +83,16 @@
                 top: -3px;
                 display: inline-block;
                 width: 40%;
-                background-color: $color-primary;
+                background-color: $color-tertiary;
                 height: 1px;
             }
 
             &::before {
-                left: -2px;
+                left: -5px;
             }
 
             &::after {
-                left: 2px;
+                left: 5px;
             }
         }
 
@@ -101,13 +101,14 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-bottom: 7rem;
 
             .auth-google, .auth-linkedin {
                 display: flex;
                 align-items: center;
                 margin: 1rem 0;
                 width: 50%;
-                min-width: 32rem;
+                min-width: 28rem;
                 height: 5rem;
                 border-radius: 30px;
                 background-color: white;
@@ -151,8 +152,9 @@
         h2 {
             font-size: 4rem;
             margin-right: 6rem;
-            margin-top: 1rem;
+            margin-top: 3rem;
             text-align: right;
+            line-height: 5.5rem;
         }
 
         a {
@@ -166,6 +168,7 @@
             font-weight: 600;
             border: 2px solid $color-primary;
             border-radius: 30px;
+            transition: background-color 0.3s ease-out;
 
             &:hover {
                 background-color: $color-primary;
@@ -177,7 +180,6 @@
             width: 90%;
             align-self: center;
             margin: auto;
-            overflow: hidden;
 
             img {
                 width: 100%;
@@ -186,9 +188,22 @@
     }
 }
 
+@media (max-width: 1180px) {
+    .auth-login {
+        div.login {
+            .oauth {
+                .auth-google, .auth-linkedin  {
+                    span {
+                        margin-left: -1rem;
+                    } 
+                }
+            }
+        }
+    }
+}
+
 @media (max-width: 760px) {
     div.auth-login {
-        display: block;
 
         .signup-redirect {
             display: none;
@@ -197,16 +212,10 @@
         .login {
             clip-path: none;
             overflow-y: auto;
+            min-height: 100%;
 
             form {
-                width: 70%;
-
-                input {
-                    width: 80%;
-                }
-                .login-btn {
-                    width: 40%;
-                }
+                width: 56%;
             }
 
             .oauth {
