--- a/client/src/Styles/Sass/pages/signup.scss
+++ b/client/src/Styles/Sass/pages/signup.scss
@@ -3,7 +3,8 @@
 .auth-signup {
     display: flex;
     justify-content: space-evenly;
-    height: 100vh;
+    min-height: 100vh;
+    overflow: auto;
 
     .login-redirect {
         flex-basis: 90%;
@@ -12,32 +13,30 @@
         color: $color-primary;
 
         h1 {
-            padding-left: 4%;
-            font-size: 3.5rem;
-            padding-top: 20px;
+           padding-left: 6rem;
+           padding-top: 2rem;
+           font-size: 4rem;
         }
 
         h2 {
-            font-size: 3.5rem;
-            padding-left: 12%;
-            padding-top: 3%;
-
-            span {
-                font-size: 4rem;
-            }
+            font-size: 5rem;
+            margin-left: 6rem;
+            margin-top: 2.5rem;
+            line-height: 7rem;
         }
 
         a {
-            margin-left: 12%;
-            margin-top: 2%;
-            width: 27%;
+            margin-left: 5rem;
+            margin-top: 2rem;
+            width: 29%;
+            min-width: 20rem;
+            line-height: 4rem;
             text-align: center;
-            height: 4rem;
-            font-size: 1.7rem;
+            font-size: 1.8rem;
             font-weight: 600;
-            padding-top: 5px;
             border: 2px solid $color-primary;
             border-radius: 30px;
+            transition: background-color 0.3s ease-out;
 
             &:hover {
                 background-color: $color-primary;
@@ -45,60 +44,70 @@
             }
         }
 
-        img {
-            align-self: center;
-            margin-top: 7%;
+        .img-container {
             width: 90%;
+            align-self: center;
+            margin: auto;
+
+            img {
+                width: 100%;
+            }
         }
     }
 
     .signup {
         background-color: $color-secondary;
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 15% 100%);
-        flex-basis: 100%;
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%);
         display: flex;
+        flex-basis: 100%;
         flex-direction: column;
         align-items: center;
         color: $color-primary;
 
         h1 {
-            font-size: 3.5rem;
-            margin-top: 11%;
+            font-size: 4rem;
+            margin-top: 11rem;
+            font-weight: 550;
+            text-align: center;
         }
 
         h4 {
-            font-size: 1.3rem;
-            padding-left: 1%;
-            margin-top: 1%;
+            font-size: 1.5rem;
+            padding-left: 10px;
+            margin-top: 1rem;
             color: $color-primary;
+            width: 100%;
         }
 
         form {
             display: flex;
             flex-direction: column;
+            align-items: center;
             justify-content: flex-end;
             height: auto;
             width: 50%;
-            margin-top: 2%;
-            margin-bottom: 4%;
+            min-width: 20rem;
+            margin-top: 2rem;
+            margin-bottom: 4rem;
 
             input {
                 display: block;
-                margin: 2% 0;
+                margin: 1rem 0;
                 width: 100%;
-                height: 4rem;
-                font-size: 1.5rem;
+                height: 4.5rem;
+                font-size: 1.7rem;
                 border: none;
                 outline: none;
                 border-radius: 30px;
-                padding-left: 10px;
+                padding: 0 10px;
             }
 
             button.signup-btn {
-                margin-top: 3%;
+                margin-top: 3rem;
                 width: 50%;
                 align-self: center;
-                height: 4rem;
+                height: 4.2rem;
+                min-width: 10rem;
                 font-size: 1.6rem;
                 background-color: $color-primary;
                 color: white;
@@ -108,14 +117,12 @@
 
                 &:hover {
                     cursor: pointer;
-                    position: relative;
-                    top: -2px;
                 }
             }
         }
 
         h2 {
-            margin-bottom: 4%;
+            margin-bottom: 4rem;
             width: 80%;
             text-align: center;
 
@@ -125,46 +132,129 @@
                 top: -3px;
                 display: inline-block;
                 width: 40%;
-                background-color: $color-primary;
+                background-color: $color-tertiary;
                 height: 1px;
             }
 
             &::before {
-                left: -2px;
+                left: -5px;
             }
 
             &::after {
-                left: 2px;
+                left: 5px;
             }
         }
 
-        .auth-google, .auth-linkedin {
+        .oauth {
+            width: 100%;
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: space-around;
-            margin: 1% 0;
-            width: 40%;
-            height: 4rem;
-            border-radius: 30px;
-            background-color: white;
-            border: 2px solid transparent;
-            font-size: 1.5rem;
-            font-weight: 600;
-            color: $color-primary;
+            margin-bottom: 7rem;
 
-            &:hover {
-                cursor: pointer;
-                position: relative;
-                top: -2px;
+            .auth-google, .auth-linkedin {
+                display: flex;
+                align-items: center;
+                margin: 1rem 0;
+                width: 50%;
+                min-width: 28rem;
+                height: 5rem;
+                border-radius: 30px;
+                background-color: white;
+                border: 2px solid transparent;
+                font-size: 1.7rem;
+                font-weight: 600;
+                color: $color-primary;
+
+                &:hover {
+                    cursor: pointer;
+                }
+
+                img {
+                    height: 70%;
+                    margin-left: 2rem;
+                    border-radius: 50%;
+                }
+
+                span {
+                    display: block;
+                    width: 100%;
+                    margin-left: -5rem;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 1180px) {
+    .auth-signup {
+        div.signup {
+            .oauth {
+                .auth-google, .auth-linkedin  {
+                    span {
+                        margin-left: -1rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 760px) {
+    div.auth-signup {
+
+        .login-redirect {
+            display: none;
+        }
+
+        .signup {
+            clip-path: none;
+            min-height: 100%;
+            overflow-y: auto;
+
+            form {
+                width: 56%;
             }
 
-            img {
-                height: 70%;
-                margin-left: -5%;
+            .oauth {
+                .auth-linkedin, .auth-google {
+                    width: 70%;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width:360px) {
+    div.auth-signup {
+        div.signup {
+            h1 {
+                margin-top: 2rem;
             }
 
-            div {
-                content: ' ';
+            h2 {
+                min-width: 25rem;
+            }
+
+            .oauth {
+                flex-direction: row;
+                justify-content: center;
+                .auth-linkedin, .auth-google {
+                    width: 4rem;
+                    height: 4rem;
+                    display: flex;
+                    min-width: 0px;
+                    justify-content: center;
+                    border-radius: 50%;
+                    margin: 0 0.5rem;
+
+                    span {
+                        display: none;
+                    }
+                    img {
+                        margin-left: 0px;
+                    }
+                }
             }
         }
     }
