1) Created a basic dashboard layout with topbar and side navigation. 2) Added concurrent package to compile sass and run react dev server simultaneously 3) Removed scss imports from jsx files. Instead made a reference to main.css from index.jsx. Therefore, no need to import styles specifically into jsx files. 4) Logout button temporarily moved to the sidenav action button.

--- a/client/src/Styles/Sass/abstracts/_variables.scss
+++ b/client/src/Styles/Sass/abstracts/_variables.scss
@@ -1,4 +1,14 @@
 $color-primary: #0c2a57;
-$color-secondary: #f5f9ff;
 $color-tertiary: #aac0e0;
 $color-gray: #a3a3a3;
+$color-gray-medium: #929292;
+$color-gray-light: #f8f8f8;
+$color-gray-mediumlight: #cccccc;
+$color-secondary: #f5f9ff;
+$color-white: #ffffff;
+$color-black: #000000;
+
+$width-icons: clamp(5rem, 5vw, 7rem);
+
+$font-big: clamp(2.5rem, 5vw, 3.5rem);
+$font-medium: clamp(1.3rem, 3vw, 1.7rem);
