--- a/client/src/Styles/main.css
+++ b/client/src/Styles/main.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  background-color: #ffffff;
+  background-color: white;
   box-sizing: border-box;
 }
 
@@ -27,10 +27,804 @@ li {
   list-style: none;
 }
 
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #aac0e0;
+  border-radius: 4rem;
+}
+
 body {
   font-family: "Roboto", sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.7;
   text-rendering: optimizeLegibility;
+  color: black;
+}
+
+.auth-login {
+  display: flex;
+  justify-content: space-evenly;
+  min-height: 100vh;
+  overflow: auto;
+}
+.auth-login .login {
+  background-color: #f5f9ff;
+  clip-path: polygon(0 0, 100% 0, 90% 100%, 0% 100%);
+  display: flex;
+  flex-basis: 100%;
+  flex-direction: column;
+  align-items: center;
+  color: #0c2a57;
+}
+.auth-login .login h1 {
+  font-size: 4rem;
+  margin-top: 11rem;
+  font-weight: 550;
+  text-align: center;
+}
+.auth-login .login h4 {
+  font-size: 1.5rem;
+  padding-left: 10px;
+  margin-top: 1rem;
+  color: #0c2a57;
+  width: 100%;
+}
+.auth-login .login form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  height: auto;
+  width: 50%;
+  min-width: 20rem;
+  margin-top: 2rem;
+  margin-bottom: 4rem;
+}
+.auth-login .login form input {
+  display: block;
+  margin: 1rem 0;
+  width: 100%;
+  height: 4.5rem;
+  font-size: 1.7rem;
+  border: none;
+  outline: none;
+  border-radius: 30px;
+  padding: 0 10px;
+}
+.auth-login .login form button.login-btn {
+  margin-top: 3rem;
+  width: 50%;
+  align-self: center;
+  height: 4.2rem;
+  min-width: 10rem;
+  font-size: 1.6rem;
+  background-color: #0c2a57;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  font-weight: 600;
+}
+.auth-login .login form button.login-btn:hover {
+  cursor: pointer;
+}
+.auth-login .login h2 {
+  margin-bottom: 4rem;
+  width: 80%;
+  text-align: center;
+}
+.auth-login .login h2::before, .auth-login .login h2::after {
+  position: relative;
+  content: " ";
+  top: -3px;
+  display: inline-block;
+  width: 40%;
+  background-color: #aac0e0;
+  height: 1px;
+}
+.auth-login .login h2::before {
+  left: -5px;
+}
+.auth-login .login h2::after {
+  left: 5px;
+}
+.auth-login .login .oauth {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 7rem;
+}
+.auth-login .login .oauth .auth-google, .auth-login .login .oauth .auth-linkedin {
+  display: flex;
+  align-items: center;
+  margin: 1rem 0;
+  width: 50%;
+  min-width: 28rem;
+  height: 5rem;
+  border-radius: 30px;
+  background-color: white;
+  border: 2px solid transparent;
+  font-size: 1.7rem;
+  font-weight: 600;
+  color: #0c2a57;
+}
+.auth-login .login .oauth .auth-google:hover, .auth-login .login .oauth .auth-linkedin:hover {
+  cursor: pointer;
+}
+.auth-login .login .oauth .auth-google img, .auth-login .login .oauth .auth-linkedin img {
+  height: 70%;
+  margin-left: 2rem;
+  border-radius: 50%;
+}
+.auth-login .login .oauth .auth-google span, .auth-login .login .oauth .auth-linkedin span {
+  display: block;
+  width: 100%;
+  margin-left: -5rem;
+}
+.auth-login .signup-redirect {
+  flex-basis: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  color: #0c2a57;
+}
+.auth-login .signup-redirect h1 {
+  padding-right: 6rem;
+  font-size: 4rem;
+  padding-top: 2rem;
+}
+.auth-login .signup-redirect h2 {
+  font-size: 4rem;
+  margin-right: 6rem;
+  margin-top: 3rem;
+  text-align: right;
+  line-height: 5.5rem;
+}
+.auth-login .signup-redirect a {
+  margin-right: 5rem;
+  margin-top: 3.5rem;
+  width: 29%;
+  line-height: 4rem;
+  min-width: 20rem;
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: 600;
+  border: 2px solid #0c2a57;
+  border-radius: 30px;
+  transition: background-color 0.3s ease-out;
+}
+.auth-login .signup-redirect a:hover {
+  background-color: #0c2a57;
+  color: white;
+}
+.auth-login .signup-redirect .img-container {
+  width: 90%;
+  align-self: center;
+  margin: auto;
+}
+.auth-login .signup-redirect .img-container img {
+  width: 100%;
+}
+
+@media (max-width: 1180px) {
+  .auth-login div.login .oauth .auth-google span, .auth-login div.login .oauth .auth-linkedin span {
+    margin-left: -1rem;
+  }
+}
+@media (max-width: 760px) {
+  div.auth-login .signup-redirect {
+    display: none;
+  }
+  div.auth-login .login {
+    clip-path: none;
+    overflow-y: auto;
+    min-height: 100%;
+  }
+  div.auth-login .login form {
+    width: 56%;
+  }
+  div.auth-login .login .oauth .auth-linkedin, div.auth-login .login .oauth .auth-google {
+    width: 70%;
+  }
+}
+@media (max-width: 360px) {
+  div.auth-login div.login h1 {
+    margin-top: 2rem;
+  }
+  div.auth-login div.login h2 {
+    min-width: 25rem;
+  }
+  div.auth-login div.login .oauth {
+    flex-direction: row;
+    justify-content: center;
+  }
+  div.auth-login div.login .oauth .auth-linkedin, div.auth-login div.login .oauth .auth-google {
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    min-width: 0px;
+    justify-content: center;
+    border-radius: 50%;
+    margin: 0 0.5rem;
+  }
+  div.auth-login div.login .oauth .auth-linkedin span, div.auth-login div.login .oauth .auth-google span {
+    display: none;
+  }
+  div.auth-login div.login .oauth .auth-linkedin img, div.auth-login div.login .oauth .auth-google img {
+    margin-left: 0px;
+  }
+}
+.auth-signup {
+  display: flex;
+  justify-content: space-evenly;
+  min-height: 100vh;
+  overflow: auto;
+}
+.auth-signup .login-redirect {
+  flex-basis: 90%;
+  display: flex;
+  flex-direction: column;
+  color: #0c2a57;
+}
+.auth-signup .login-redirect h1 {
+  padding-left: 6rem;
+  padding-top: 2rem;
+  font-size: 4rem;
+}
+.auth-signup .login-redirect h2 {
+  font-size: 5rem;
+  margin-left: 6rem;
+  margin-top: 2.5rem;
+  line-height: 7rem;
+}
+.auth-signup .login-redirect a {
+  margin-left: 5rem;
+  margin-top: 2rem;
+  width: 29%;
+  min-width: 20rem;
+  line-height: 4rem;
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: 600;
+  border: 2px solid #0c2a57;
+  border-radius: 30px;
+  transition: background-color 0.3s ease-out;
+}
+.auth-signup .login-redirect a:hover {
+  background-color: #0c2a57;
+  color: white;
+}
+.auth-signup .login-redirect .img-container {
+  width: 90%;
+  align-self: center;
+  margin: auto;
+}
+.auth-signup .login-redirect .img-container img {
+  width: 100%;
+}
+.auth-signup .signup {
+  background-color: #f5f9ff;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%);
+  display: flex;
+  flex-basis: 100%;
+  flex-direction: column;
+  align-items: center;
+  color: #0c2a57;
+}
+.auth-signup .signup h1 {
+  font-size: 4rem;
+  margin-top: 11rem;
+  font-weight: 550;
+  text-align: center;
+}
+.auth-signup .signup h4 {
+  font-size: 1.5rem;
+  padding-left: 10px;
+  margin-top: 1rem;
+  color: #0c2a57;
+  width: 100%;
+}
+.auth-signup .signup form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  height: auto;
+  width: 50%;
+  min-width: 20rem;
+  margin-top: 2rem;
+  margin-bottom: 4rem;
+}
+.auth-signup .signup form input {
+  display: block;
+  margin: 1rem 0;
+  width: 100%;
+  height: 4.5rem;
+  font-size: 1.7rem;
+  border: none;
+  outline: none;
+  border-radius: 30px;
+  padding: 0 10px;
+}
+.auth-signup .signup form button.signup-btn {
+  margin-top: 3rem;
+  width: 50%;
+  align-self: center;
+  height: 4.2rem;
+  min-width: 10rem;
+  font-size: 1.6rem;
+  background-color: #0c2a57;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  font-weight: 600;
+}
+.auth-signup .signup form button.signup-btn:hover {
+  cursor: pointer;
+}
+.auth-signup .signup h2 {
+  margin-bottom: 4rem;
+  width: 80%;
+  text-align: center;
+}
+.auth-signup .signup h2::before, .auth-signup .signup h2::after {
+  position: relative;
+  content: " ";
+  top: -3px;
+  display: inline-block;
+  width: 40%;
+  background-color: #aac0e0;
+  height: 1px;
+}
+.auth-signup .signup h2::before {
+  left: -5px;
+}
+.auth-signup .signup h2::after {
+  left: 5px;
+}
+.auth-signup .signup .oauth {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 7rem;
+}
+.auth-signup .signup .oauth .auth-google, .auth-signup .signup .oauth .auth-linkedin {
+  display: flex;
+  align-items: center;
+  margin: 1rem 0;
+  width: 50%;
+  min-width: 28rem;
+  height: 5rem;
+  border-radius: 30px;
+  background-color: white;
+  border: 2px solid transparent;
+  font-size: 1.7rem;
+  font-weight: 600;
+  color: #0c2a57;
+}
+.auth-signup .signup .oauth .auth-google:hover, .auth-signup .signup .oauth .auth-linkedin:hover {
+  cursor: pointer;
+}
+.auth-signup .signup .oauth .auth-google img, .auth-signup .signup .oauth .auth-linkedin img {
+  height: 70%;
+  margin-left: 2rem;
+  border-radius: 50%;
+}
+.auth-signup .signup .oauth .auth-google span, .auth-signup .signup .oauth .auth-linkedin span {
+  display: block;
+  width: 100%;
+  margin-left: -5rem;
+}
+
+@media (max-width: 1180px) {
+  .auth-signup div.signup .oauth .auth-google span, .auth-signup div.signup .oauth .auth-linkedin span {
+    margin-left: -1rem;
+  }
+}
+@media (max-width: 760px) {
+  div.auth-signup .login-redirect {
+    display: none;
+  }
+  div.auth-signup .signup {
+    clip-path: none;
+    min-height: 100%;
+    overflow-y: auto;
+  }
+  div.auth-signup .signup form {
+    width: 56%;
+  }
+  div.auth-signup .signup .oauth .auth-linkedin, div.auth-signup .signup .oauth .auth-google {
+    width: 70%;
+  }
+}
+@media (max-width: 360px) {
+  div.auth-signup div.signup h1 {
+    margin-top: 2rem;
+  }
+  div.auth-signup div.signup h2 {
+    min-width: 25rem;
+  }
+  div.auth-signup div.signup .oauth {
+    flex-direction: row;
+    justify-content: center;
+  }
+  div.auth-signup div.signup .oauth .auth-linkedin, div.auth-signup div.signup .oauth .auth-google {
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    min-width: 0px;
+    justify-content: center;
+    border-radius: 50%;
+    margin: 0 0.5rem;
+  }
+  div.auth-signup div.signup .oauth .auth-linkedin span, div.auth-signup div.signup .oauth .auth-google span {
+    display: none;
+  }
+  div.auth-signup div.signup .oauth .auth-linkedin img, div.auth-signup div.signup .oauth .auth-google img {
+    margin-left: 0px;
+  }
+}
+.hamburger {
+  cursor: pointer;
+  height: 2.6rem;
+  padding: 0 1.5rem;
+  width: clamp(5rem, 5vw, 7rem);
+  align-self: flex-end;
+}
+.hamburger__main {
+  width: 100%;
+  height: 0.2rem;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #ffffff;
+  transition: background-color 0.3s ease;
+}
+.hamburger__main::after {
+  content: "";
+  overflow: hidden;
+  height: 0.2rem;
+  width: 100%;
+  background-color: #ffffff;
+  position: absolute;
+  top: 0.8rem;
+  transition: top 0.1s linear, transform 0.3s ease-out;
+}
+.hamburger__main::before {
+  content: "";
+  overflow: hidden;
+  height: 0.2rem;
+  width: 100%;
+  background-color: #ffffff;
+  position: absolute;
+  top: -0.8rem;
+  transition: top 0.1s linear, transform 0.3s ease-out;
+}
+.hamburger__main.active {
+  background-color: transparent;
+}
+.hamburger__main.active::after {
+  top: 0;
+  transform: rotate(135deg);
+}
+.hamburger__main.active::before {
+  top: 0;
+  transform: rotate(-135deg);
+}
+.hamburger:hover .hamburger__main::after {
+  top: 1rem;
+}
+.hamburger:hover .hamburger__main::before {
+  top: -1rem;
+}
+.hamburger:hover .hamburger__main.active::after {
+  top: 0;
+}
+.hamburger:hover .hamburger__main.active::before {
+  top: 0;
+}
+
+.sidenav {
+  background-color: #0c2a57;
+  width: clamp(5rem, 5vw, 7rem);
+  position: sticky;
+  top: 0;
+  height: 100vh;
+  flex-shrink: 0;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  padding: 2rem 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  transition: width 0.3s ease;
+  z-index: 2;
+}
+.sidenav__top {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.sidenav__top__logo {
+  height: 2.5rem;
+  padding: 0 1.5rem;
+  overflow: hidden;
+  display: none;
+  align-items: center;
+}
+.sidenav__top__logo img {
+  height: 100%;
+}
+.sidenav__linkGroup {
+  display: flex;
+  flex-flow: column nowrap;
+}
+.sidenav__link {
+  width: 90%;
+  padding: 0.5rem 0;
+  margin: 1rem 0;
+  position: relative;
+  align-self: flex-start;
+  cursor: pointer;
+  display: flex;
+  border-top-right-radius: 8rem;
+  border-bottom-right-radius: 8rem;
+  transition: background-color 0.3s ease;
+}
+.sidenav__link.selected {
+  background-color: #103976;
+}
+.sidenav__link:hover {
+  background-color: #0e3369;
+}
+.sidenav__link.selected::before {
+  content: "";
+  height: 100%;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 0.3rem;
+  background-color: #ffffff;
+  position: absolute;
+}
+.sidenav__link.selected .sidenav__link__icon, .sidenav__link.selected .sidenav__link__text {
+  color: #ffffff;
+}
+.sidenav__link__icon-container {
+  width: clamp(5rem, 5vw, 7rem);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+}
+.sidenav__link__icon {
+  font-size: 1.8rem;
+}
+.sidenav__link__icon, .sidenav__link__text {
+  color: #929292;
+}
+.sidenav__link__text {
+  font-size: 1.5rem;
+  margin-left: 1.7rem;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 1s ease;
+  white-space: nowrap;
+}
+.sidenav.active {
+  width: 25rem;
+}
+.sidenav.active .btn-sidenav {
+  opacity: 1;
+}
+.sidenav.active .sidenav__top__logo {
+  display: flex;
+}
+.sidenav.active .sidenav__link__text {
+  display: inline-block;
+  opacity: 1;
+  visibility: visible;
+}
+
+@media only screen and (max-width: 700px) {
+  .sidenav {
+    position: fixed;
+    top: 0;
+  }
+}
+.searchBox {
+  display: flex;
+  flex-flow: row nowrap;
+  position: relative;
+  align-items: center;
+}
+.searchBox__input {
+  width: 20rem;
+  height: 3.1rem;
+  padding: 0.7rem 0 0.7rem 1.5rem;
+  border: 0.1rem solid #a3a3a3;
+  border-radius: 8rem;
+  outline: none;
+  border-right: none;
+  border-top-right-radius: 0 0;
+  border-bottom-right-radius: 0 0;
+  transition: border 0.3s ease;
+}
+@media only screen and (max-width: 500px) {
+  .searchBox__input {
+    width: 0;
+    padding: 0;
+    border: none;
+  }
+}
+.searchBox__input:focus {
+  border: 0.1rem solid #0c2a57;
+  border-right: none;
+}
+.searchBox__input:focus::-webkit-input-placeholder {
+  transition: opacity 0.3s ease;
+  opacity: 0;
+}
+.searchBox__input:focus::-moz-placeholder {
+  transition: opacity 0.3s ease;
+  opacity: 0;
+}
+.searchBox__input:focus:-ms-placeholder {
+  transition: opacity 0.3s ease;
+  opacity: 0;
+}
+.searchBox__input.small {
+  width: 0;
+  padding: 0;
+  border: none;
+}
+.searchBox__input:focus + .searchBox__btn {
+  border: 0.1rem solid #0c2a57;
+  border-left: none;
+}
+.searchBox__btn {
+  display: inline-block;
+  border: none;
+  background-color: transparent;
+  right: 1.5rem;
+  outline: none;
+  cursor: pointer;
+  height: 3.1rem;
+  width: 3.1rem;
+  border-left: none;
+  border-top-right-radius: 8rem 8rem;
+  border-bottom-right-radius: 8rem 8rem;
+  border: 0.1rem solid #a3a3a3;
+  border-left: none;
+  transition: border 0.3s ease;
+}
+@media only screen and (max-width: 500px) {
+  .searchBox__btn {
+    border: 0.1rem solid #a3a3a3;
+    border-radius: 50%;
+  }
+}
+.searchBox__btn.small {
+  border: 0.1rem solid #a3a3a3;
+  border-radius: 50%;
+}
+
+.btn {
+  font-size: clamp(1.3rem, 3vw, 1.7rem);
+  padding: 0.2rem 4rem;
+  color: #ffffff;
+  border-radius: 4rem;
+  background-color: #0c2a57;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  cursor: pointer;
+  min-height: 3rem;
+}
+.btn-sidenav {
+  background-color: #17a9ce;
+  padding: clamp(0.1rem, 0.5vh, 0.4rem) 2rem;
+  width: 80%;
+  margin: 2rem auto;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.topbar {
+  flex: 1;
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 1rem 2rem;
+  background-color: #ffffff;
+}
+.topbar__up {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.topbar__up__personal {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.topbar__up__personal__icons {
+  font-size: clamp(1.5rem, 1.5vw, 2.5rem);
+  margin: 0 1rem;
+  color: #cccccc;
+  position: relative;
+  cursor: pointer;
+}
+.topbar__up__personal__icons::after {
+  content: "";
+  height: 0.5rem;
+  width: 0.5rem;
+  border-radius: 50%;
+  background-color: #0c2a57;
+  position: absolute;
+  top: 0.3rem;
+  right: 0;
+}
+.topbar__up__personal__profile {
+  height: 4.5rem;
+  width: 4.5rem;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-left: 1.5rem;
+}
+.topbar__up__personal__profile img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  object-position: top;
+}
+.topbar__down {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-flow: row wrap;
+  margin-top: 2rem;
+}
+.topbar__down__infoText {
+  display: flex;
+  flex-flow: column nowrap;
   color: #000000;
+  line-height: 1.2;
+}
+
+.breadcrumbs {
+  font-size: 1.3rem;
+}
+
+.greetings {
+  font-size: clamp(2.5rem, 5vw, 3.5rem);
+  color: #0c2a57;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+@media only screen and (max-width: 700px) {
+  .topbar {
+    margin-left: clamp(5rem, 5vw, 7rem);
+  }
+}
+.dashboard {
+  display: flex;
+  flex-flow: row nowrap;
+  min-height: 100vh;
+  background-color: #f8f8f8;
+}
+
+.container {
+  flex: 1;
 }
