--- a/client/src/Styles/Sass/main.scss
+++ b/client/src/Styles/Sass/main.scss
@@ -2,5 +2,9 @@
 
 @use './pages/login.scss';
 @use './pages/signup.scss';
+@use './pages/profile.scss';
+@use './pages/company.scss';
+@use './pages/employees.scss';
 
 @use './layouts/dashboard.scss';
+
